--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,31 @@
-fastapi
-uvicorn
-python-multipart
-pdfplumber
-pydantic
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.11.0
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+cryptography==46.0.3
+distro==1.9.0
+fastapi==0.121.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+jiter==0.12.0
+openai==2.8.0
+pdfminer.six==20251107
+pdfplumber==0.11.8
+pillow==12.0.0
+pycparser==2.23
+pydantic==2.12.4
+pydantic_core==2.41.5
+pypdfium2==5.0.0
+python-multipart==0.0.20
+sniffio==1.3.1
+starlette==0.49.3
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uvicorn==0.38.0
